initial css styling

--- a/style.css
+++ b/style.css
@@ -1,4 +1,32 @@
+body {
+	background-color: #f0f0f0;
+	max-width: 900px;
+	padding: 20px;
+	margin: 0 auto;
+	color: #888888;
+	font-family: "Futura";
+	text-transform: uppercase;
+}
+
 div.box {
-	border: 2px solid gray;
-	border-radius: 5px;
+	position: relative;
+	border: 2px solid #bbbbbb;
+	border-radius: 15px;
+	padding: 20px;
+	margin-bottom: 10px;
+	text-align: center;
+}
+
+.fadedout {
+	opacity: 0;
+	trasition: opacity 1s;
+}
+
+.fadedin {
+	opacity: 1;
+	trasition: opacity 1s;
+}
+
+.fadingin {
+	position: absolute;
 }
