fading engine now functional

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+	box-sizing: border-box;
+}
+
 body {
 	background-color: #f0f0f0;
 	max-width: 900px;
@@ -17,16 +21,28 @@ div.box {
 	text-align: center;
 }
 
+div.container {
+	position: relative;
+}
+
 .fadedout {
 	opacity: 0;
-	trasition: opacity 1s;
+	trasition: all 1s;
+	-webkit-transition: all 1s;
 }
 
 .fadedin {
 	opacity: 1;
-	trasition: opacity 1s;
+	trasition: all 1s;
+	-webkit-transition: all 1s;
 }
 
-.fadingin {
+#fadingin, #fadingin_TEMP {
 	position: absolute;
+	top: 0;
+	width: 100%;
+}
+
+#biblioref, #biblioref_TEMP {
+	position: relative;
 }
