improved fading effect using single div.box
Previously the entire div#biblioref_curr would fade out as div#biblioref_next
would fade in (though I may have the ids wrong there). Now, only the h3
elements play do-si-do and a single div#bibliorefdiv fades its border without
flickering.

Additionally, this is the best commit message I have ever written.

--- a/style.css
+++ b/style.css
@@ -25,24 +25,23 @@ div.container {
 	position: relative;
 }
 
-.fadedout {
-	opacity: 0;
+#upcomingresult, #upcomingresult_TEMP, #currentresult, #currentresult_TEMP, #bibliorefdiv {
+	margin: 0;
+	padding: 1em 0;
 	trasition: all 1s;
 	-webkit-transition: all 1s;
 }
 
-.fadedin {
-	opacity: 1;
-	trasition: all 1s;
-	-webkit-transition: all 1s;
-}
-
-#biblioref_next, #biblioref_next_TEMP {
+#upcomingresult, #upcomingresult_TEMP {
 	position: absolute;
 	top: 0;
 	width: 100%;
+
+	opacity: 0;
 }
 
-#biblioref_curr, #biblioref_curr_TEMP {
+#currentresult, #currentresult_TEMP {
 	position: relative;
+
+	opacity: 1;
 }
