--- a/style.css
+++ b/style.css
@@ -25,23 +25,9 @@ div.container {
 	position: relative;
 }
 
-#upcomingresult, #upcomingresult_TEMP, #currentresult, #currentresult_TEMP, #bibliorefdiv {
+#bibliorefdiv {
 	margin: 0;
 	padding: 1em 0;
 	trasition: all 1s;
 	-webkit-transition: all 1s;
-}
-
-#upcomingresult, #upcomingresult_TEMP {
-	position: absolute;
-	top: 0;
-	width: 100%;
-
-	opacity: 0;
-}
-
-#currentresult, #currentresult_TEMP {
-	position: relative;
-
-	opacity: 1;
 }
