--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 	padding: 20px;
 	margin: 0 auto;
 	color: #888888;
-	font-family: "Futura";
+	font-family: 'FuturaMedium', Futura, 'Trebuchet MS', Arial, sans-serif;
 	text-transform: uppercase;
 }
 
