okay trying single font-family option

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 	padding: 20px;
 	margin: 0 auto;
 	color: #888888;
-	font-family: Futura-Medium, Futura, 'Trebuchet MS', Arial, sans-serif;
+	font-family: Futura-Medium;
 	font-weight: normal;
 	text-transform: uppercase;
 }
