--- a/style.css
+++ b/style.css
@@ -27,8 +27,7 @@ div.container {
 }
 
 #upcomingresult, #upcomingresult_TEMP, #currentresult, #currentresult_TEMP, #bibliorefdiv {
-	trasition: all 1s;
-	-webkit-transition: all 1s;
+	transition: all 1s;
 }
 
 #upcomingresult, #upcomingresult_TEMP, #currentresult, #currentresult_TEMP {
